<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/main_gradient"

    >


    <Button android:id="@+id/menu_Klient"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal = "true"
        android:layout_marginTop="100dp"
        android:text="@string/menu_Klient"
        android:background="@drawable/main_button_rounded"
        />
    <Button android:id="@+id/menu_Opony"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal = "true"
        android:layout_marginTop="210dp"
        android:text="@string/menu_Opony"
        android:background="@drawable/main_button_rounded"
        />
    <Button android:id="@+id/menu_Zamowienia"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal = "true"
        android:layout_marginTop="320dp"
        android:text="@string/menu_Zamowienia"
        android:background="@drawable/main_button_rounded"
        />

</RelativeLayout>